--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-thunk": "^1.0.0",
-    "webpack": "^1.12.9"
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
