--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -17,12 +17,17 @@
   },
   "homepage": "https://github.com/ixlei/rs#readme",
   "dependencies": {
+    "es6-promise": "^3.0.2",
+    "isomorphic-fetch": "^2.2.0",
     "jsx-loader": "^0.13.2",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.0",
+    "react-router": "^1.0.1",
     "redux": "^3.0.4",
+    "redux-logger": "^2.1.4",
+    "redux-router": "^1.0.0-beta5",
     "redux-thunk": "^1.0.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
@@ -31,7 +36,10 @@
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.2"
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.1.2",
+    "webpack-module-hot-accept": "^1.0.3"
   }
 }
