--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -37,9 +37,11 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.0",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "webpack-module-hot-accept": "^1.0.3"
   }
 }
