--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -18,13 +18,14 @@
   "homepage": "https://github.com/ixlei/rs#readme",
   "dependencies": {
     "es6-promise": "^3.0.2",
+    "history": "^1.16.0",
     "isomorphic-fetch": "^2.2.0",
     "jsx-loader": "^0.13.2",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.1",
+    "react-router": "^1.0.2",
     "redux": "^3.0.4",
     "redux-logger": "^2.1.4",
     "redux-router": "^1.0.0-beta5",
