--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -22,6 +22,7 @@
     "isomorphic-fetch": "^2.2.0",
     "jsx-loader": "^0.13.2",
     "react": "^0.14.3",
+    "react-d3": "^0.4.0",
     "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.0",
