--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/ixlei/rs#readme",
   "dependencies": {
+    "babel-polyfill": "^6.3.14",
     "es6-promise": "^3.0.2",
     "history": "^1.16.0",
     "isomorphic-fetch": "^2.2.0",
     "jsx-loader": "^0.13.2",
+    "normalizr": "^1.4.0",
     "react": "^0.14.3",
     "react-d3": "^0.4.0",
     "react-dom": "^0.14.3",
@@ -32,7 +34,8 @@
     "redux-router": "^1.0.0-beta5",
     "redux-thunk": "^1.0.0",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
