--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ixlei/rs#readme",
   "dependencies": {
     "babel-polyfill": "^6.3.14",
+    "chart.js": "^1.0.2",
     "es6-promise": "^3.0.2",
     "history": "^1.13.1",
     "isomorphic-fetch": "^2.2.0",
