--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -22,6 +22,7 @@
     "es6-promise": "^3.0.2",
     "history": "^1.13.1",
     "isomorphic-fetch": "^2.2.0",
+    "jest": "^0.1.40",
     "jsx-loader": "^0.13.2",
     "normalizr": "^1.4.0",
     "react": "^0.14.3",
