--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -24,6 +24,7 @@
     "isomorphic-fetch": "^2.2.0",
     "jest": "^0.1.40",
     "jsx-loader": "^0.13.2",
+    "mocha": "^2.4.5",
     "normalizr": "^1.4.0",
     "react": "^0.14.3",
     "react-d3": "^0.4.0",
