--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -30,6 +30,7 @@
     "react-d3": "^0.4.0",
     "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
+    "react-motion": "^0.4.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.2",
     "redux": "^3.0.4",
