--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -19,15 +19,18 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "chart.js": "^1.0.2",
+    "d3": "^3.5.16",
     "es6-promise": "^3.0.2",
     "history": "^1.13.1",
     "isomorphic-fetch": "^2.2.0",
     "jest": "^0.1.40",
+    "jsdom": "^8.1.0",
     "jsx-loader": "^0.13.2",
     "mocha": "^2.4.5",
     "normalizr": "^1.4.0",
     "react": "^0.14.3",
     "react-d3": "^0.4.0",
+    "react-d3-basic": "^1.6.9",
     "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "react-motion": "^0.4.2",
