--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",  
-	"start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+	"build": "atool-build --devtool source-map ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/ixlei/rs#readme",
   "dependencies": {
+    "antd": "^0.12.12",
+    "atool-build": "^0.6.1",
     "babel-polyfill": "^6.3.14",
     "chart.js": "^1.0.2",
     "d3": "^3.5.16",
@@ -56,5 +59,8 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack-module-hot-accept": "^1.0.3"
+  },
+  "entry": {
+    "main":"./scripts/entry/entry.js"
   }
 }
